--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -1,2 +1,6 @@
 # 小小日记-Web101
 
+## 尝试一
+读了bottle的[tutorial](bottlepy.org/docs/dev/tutorial.html)，感受到几行代码能写出一个web的速度感，很震撼。  
+不过读文档还是有些看不懂，主要是感觉和自己具体应用层面又还有些差距。  
+继续搜tutorial，发现了官方的[Tutorial: Todo-List Application](http://bottlepy.org/docs/dev/tutorial_app.html),觉得这是个很好的尝试，其实todolist和diary有些相似，都是需要一些添加删除阅读之类的功能嘛，所以从这里开始啦。
