--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -1,6 +1,28 @@
 # 小小日记-Web101
 
 ## 尝试一
-读了bottle的[tutorial](bottlepy.org/docs/dev/tutorial.html)，感受到几行代码能写出一个web的速度感，很震撼。  
+- 读了bottle的[tutorial](bottlepy.org/docs/dev/tutorial.html)，感受到几行代码能写出一个web的速度感，很震撼。  
 不过读文档还是有些看不懂，主要是感觉和自己具体应用层面又还有些差距。  
-继续搜tutorial，发现了官方的[Tutorial: Todo-List Application](http://bottlepy.org/docs/dev/tutorial_app.html),觉得这是个很好的尝试，其实todolist和diary有些相似，都是需要一些添加删除阅读之类的功能嘛，所以从这里开始啦。
+- 继续搜tutorial，发现了官方的[Tutorial: Todo-List Application](http://bottlepy.org/docs/dev/tutorial_app.html),觉得这是个很好的尝试，其实todolist和diary有些相似，都是需要一些添加删除阅读之类的功能嘛，所以从这里开始啦。
+
+## 尝试二
+### 首页
+用html语言就可以搞定了
+- 问候语
+- 写日记和读日记的link
+
+### 读日记
+希望能够增加back home 的link以及\n能够自动换行  
+- back home的link直接用html添加即可
+- 关于\n变成```<br \>```自动换行  
+尝试了N次之后，发现用template的时候，```<br \>```是直接显示出来了，而不是作为html语言起到作用，  
+所以直接用字符串的链接，没有用template来显示日记了  
+```    output='<p>====日记====</p>'+diaryContent+"<br /><br /><a href='/writing'>写日记<a><br /><a href='/'>Back Home<a>"```  
+```return output```  
+觉得这里还有待改进，不过总算实现了自己想要的效果
+
+### 写日记
+直接用了todolist的tutorial中的new-task模块，  
+其实就是把上一节的net101中的
+```newDiary=data.strip()``` 改成了
+```newDiary=request.GET.get('newdiary', '').strip()```
