--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -22,7 +22,11 @@
 觉得这里还有待改进，不过总算实现了自己想要的效果
 
 ### 写日记
-直接用了todolist的tutorial中的new-task模块，  
-其实就是把上一节的net101中的
+直接用了todolist的tutorial中的new-task模块，  稍微修改了一下名字之类的。   
+调用这部分内容，其实就是把上一节的net101中的
 ```newDiary=data.strip()``` 改成了
 ```newDiary=request.GET.get('newdiary', '').strip()```
+
+## 尝试三
+做完之后发现我完全无视了另外一个要求，
+```同时兼容 3w 的 Net 版本的命令行界面进行交互```
