--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -29,4 +29,5 @@
 
 ## 尝试三
 做完之后发现我完全无视了另外一个要求，
-```同时兼容 3w 的 Net 版本的命令行界面进行交互```
+```同时兼容 3w 的 Net 版本的命令行界面进行交互``` ,囧囧囧  
+把上次的做的diary-server,diary-client拷贝到这次的文件夹下，发现其实也很顺利，照样能用，反正都是调用的diary.txt的数据嘛
