--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -28,6 +28,7 @@
 ```newDiary=request.GET.get('newdiary', '').strip()```
 
 ## 尝试三
-做完之后发现我完全无视了另外一个要求，
-```同时兼容 3w 的 Net 版本的命令行界面进行交互``` ,囧囧囧  
-把上次的做的diary-server,diary-client拷贝到这次的文件夹下，发现其实也很顺利，照样能用，反正都是调用的diary.txt的数据嘛 
+- 做完之后发现我完全无视了另外一个要求，
+```同时兼容 3w 的 Net 版本的命令行界面进行交互``` ,囧囧囧,感觉自己完全跑题了  
+- 把上次的做的diary-server,diary-client拷贝到这次的文件夹下，发现其实也很顺利，照样能用，反正都是调用的diary.txt的数据嘛 
+- 虽然跑题了，不过好歹两套系统都是独立可用的...
