--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -32,3 +32,9 @@
 ```同时兼容 3w 的 Net 版本的命令行界面进行交互``` ,囧囧囧,感觉自己完全跑题了  
 - 把上次的做的diary-server,diary-client拷贝到这次的文件夹下，发现其实也很顺利，照样能用，反正都是调用的diary.txt的数据嘛 
 - 虽然跑题了，不过好歹两套系统都是独立可用的...
+
+## 后记
+- bottle写网页居然这么简单，几十行代码就搞定了，写完有种难以置信的感觉
+- 感觉网页还是不好看，可是bootstrap暂时也不知道怎么用上去的好，所以先试验性的在greeting页面中加了一点html和css的内容。
+- 真的想把bootstrap能用上去，但是搜到的好像是flask和bootstrp的结合比较多。
+- 真正要架设在网站上，还是有要改的地方，如果不是调用自己本地的diary.txt,而是改变网站中的diary.txt，改怎么改呢？这回肯定不是用import os来解决了。
