--- a/1sTry/web101.md
+++ b/1sTry/web101.md
@@ -37,4 +37,5 @@
 - bottle写网页居然这么简单，几十行代码就搞定了，写完有种难以置信的感觉
 - 感觉网页还是不好看，可是bootstrap暂时也不知道怎么用上去的好，所以先试验性的在greeting页面中加了一点html和css的内容。
 - 真的想把bootstrap能用上去，但是搜到的好像是flask和bootstrp的结合比较多。
-- 真正要架设在网站上，还是有要改的地方，如果不是调用自己本地的diary.txt,而是改变网站中的diary.txt，改怎么改呢？这回肯定不是用import os来解决了。
+- 真正要架设在网站上，还是有要改的地方，如果不是调用自己本地的diary.txt,而是改变网站中的diary.txt，该怎么改呢？这回肯定不是用import os来解决了。有待思考。
+- 通过bottle，不同的用户可以方便的拥有属于自己的界面，但是以后放在网站上要使用的话，起码要添加密码认证，保护自己的内容。
